--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
           <h2 class="us-work">Чим ми займаємося</h2>
           <ul class="img-work list">
             <li>
-              <img src="./images/part1.jpg" alt="web developer" />
+              <div class="us-animation">
+                <img src="./images/part1.jpg" alt="web developer"/>
+                <div class="us-work-animation"><p>Десктопні додатки</p></div>
+              </div>
             </li>
             <li>
               <img
