--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           </ul>
         </nav>
         <div class="heder-list-con">
-          <ul class="adres-headerr list">
+          <ul class="adres-headerr list ">
             <li>
-              <a class="list item" href="mailto:info@devstudio.com"
+              <a class="list item list-animation" href="mailto:info@devstudio.com"
               >info@devstudio.com
               <svg class="icon-svg" width="16" height="12">
                 <use
@@ -52,7 +52,7 @@
              </a>
             </li>
             <li>
-              <a class="list item" href="tel:+380961111111"
+              <a class="list item list-animation" href="tel:+380961111111"
               >+38 096 111 11 11
               <svg class="icon-svg" width="10" height="16">
                 <use
@@ -142,18 +142,24 @@
               </div>
             </li>
             <li>
+              <div class="us-animation">
               <img
                 src="./images/part2.jpg"
                 alt="programing in laptop"
                 width="370"
               />
+              <div class="us-work-animation"><p>Мобільні додаткиh</p></div>
+            </div>
             </li>
             <li>
+              <div class="us-animation">
               <img
                 src="./images/part3.jpg"
                 alt="design in laptop"
                 width="370"
               />
+              <div class="us-work-animation"><p>Десктопні додатки</p></div>
+            </div>
             </li>
           </ul>
         </div>
