--- a/portfolio.html
+++ b/portfolio.html
@@ -97,14 +97,19 @@
             <div class="container">
               <ul class="menu card-set list">
                 <li class="items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page8.jpg"
                         alt="laptop"
                         width="370"
                         height="295"
                       />
-                     
+                     <div class="open-p">
+                      <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                        Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                     </div>
+                    </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Технокряк</h2>
                         <p class="menu-p">Веб-сайт</p>
@@ -112,13 +117,19 @@
               </a>
                 </li>
                 <li class="items ">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page1.jpg"
                         alt="bascetbal"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">
                           Постер New Orlean vs Golden Star
@@ -128,13 +139,19 @@
                   </a>
                 </li>
                 <li class=" items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page2.jpg"
                         alt="fishpage"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Ресторан Seafood</h2>
                         <p class="menu-p">Додаток</p>
@@ -143,13 +160,19 @@
                 </li>
                 <li class=" items">
 
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page3.jpg"
                         alt="lsten"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Проєкт Prime</h2>
                         <p class="menu-p">Маркетинг</p>
@@ -157,13 +180,19 @@
                   </a>
                 </li>
                 <li class=" items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page4.jpg"
                         alt="box"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Проєкт Boxes</h2>
                         <p class="menu-p">Додаток</p>
@@ -171,13 +200,19 @@
                   </a>
                 </li>
                 <li class=" items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page9.jpg"
                         alt="imac"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Inspiration has no Borders</h2>
                         <p class="menu-p">Веб-сайт</p>
@@ -185,13 +220,19 @@
                   </a>
                 </li>
                 <li class=" items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page5.jpg"
                         alt="book"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Видання Limited Edition</h2>
                         <p class="menu-p">Дизайн</p>
@@ -199,13 +240,19 @@
                   </a>
                 </li>
                 <li class=" items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page6.jpg"
                         alt="sale"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Проєкт LAB</h2>
                         <p class="menu-p">Маркетинг</p>
@@ -213,13 +260,19 @@
                   </a>
                 </li>
                 <li class=" items">
-                  <a class="link shadow" href="">
+                  <a class="links shadow" href="">
+                    <div class="open">
                       <img
                         src="./images/page2/page7.jpg"
                         alt="deloper"
                         width="370"
                         height="295"
                       />
+                      <div class="open-p">
+                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                          Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                       </div>
+                      </div>
                       <div class="text-div">
                         <h2 class="menu-h2">Growing Business</h2>
                         <p class="menu-p">Додаток</p>
