--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
     <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal"> 
-        <button class="modal-btn" type="button" data-modal-close>&#215</button>
+        <button class="modal-btn" type="button" data-modal-close>&#215;</button>
         <svg width="20" height="20">
           <use href=""></use>
         </svg>
