--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--SiteBar-->
-    <header>
+    <header class="border">
       <div class="header-container container">
         <a class="logo list" lang="en" href="/"
           ><span class="logoweb">Web</span>Studio</a
